# HydraMetrics

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  vcpkg.json
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  load_generator.py  smoke_test.py
doc/: ARCHITECTURE.md  BENCHMARK.md
src/: CMakeLists.txt  main.cpp
src/core/: aggregator_interface.hpp  metric_aggregator.cpp  metric_aggregator.hpp  protocol_parser.cpp  protocol_parser.hpp  types.hpp
src/network/: server_interface.hpp  tcp_server.cpp  tcp_server.hpp
src/storage/: flush_worker.cpp  flush_worker.hpp  redis_storage.cpp  redis_storage.hpp  storage_interface.hpp
tests/: CMakeLists.txt
tests/core_tests/: metric_aggregator_test.cpp  protocol_parser_test.cpp
